# Conways-Game-of-Life-C

./: CMakeLists.txt  README.md  file.c  file.h  finalStateFile.txt  game.c  game.h  initialStateFile.txt  main.c  unit_tests.c  view.c  view.h
